Fixed navbar across pages

--- a/performances.html
+++ b/performances.html
@@ -36,74 +36,37 @@
 =========================================-->
 
 <nav class="navbar main-nav border-less fixed-top navbar-expand-lg p-0">
-  <div class="container-fluid p-0">
-      <!-- logo -->
-      <a class="navbar-brand" href="index.html">
-        <img src="images/logo.png" alt="logo">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="fa fa-bars"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item dropdown active dropdown-slide">
-          <a class="nav-link" href="#"  data-toggle="dropdown">Home
-            <span>/</span>
-          </a>
-          <!-- Dropdown list -->
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="index.html">Homepage</a>
-            <a class="dropdown-item" href="homepage-two.html">Homepage 2</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="speakers.html">Speakers
-            <span>/</span>
-          </a>
-        </li>
-        <li class="nav-item dropdown dropdown-slide">
-          <a class="nav-link" href="#" data-toggle="dropdown">Pages<span>/</span></a>
-            <!-- Dropdown list -->
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="about-us.html">About Us</a>
-              <a class="dropdown-item" href="single-speaker.html">Single Speaker</a>
-              <a class="dropdown-item" href="gallery.html">Gallery</a>
-              <a class="dropdown-item" href="gallery-two.html">Gallery-02</a>
-              <a class="dropdown-item" href="testimonial.html">Testimonial</a>
-              <a class="dropdown-item" href="pricing.html">Pricing</a>
-              <a class="dropdown-item" href="FAQ.html">FAQ</a>
-              <a class="dropdown-item" href="404.html">404</a>
-            </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="schedule.html">Schedule<span>/</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="sponsors.html">Sponsors<span>/</span></a>
-        </li>
-        <li class="nav-item dropdown dropdown-slide">
-          <a class="nav-link" href="#"  data-toggle="dropdown">News
-            <span>/</span>
-          </a>
-          <!-- Dropdown list -->
-          <div class="dropdown-menu">
-            <a class="dropdown-item" href="news.html">News without sidebar</a>
-            <a class="dropdown-item" href="news-right-sidebar.html">News with right sidebar</a>
-            <a class="dropdown-item" href="news-left-sidebar.html">News with left sidebar</a>
-            <a class="dropdown-item" href="news-single.html">News Single</a>
-          </div>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
-        </li>
-      </ul>
-      <a href="#" class="ticket">
-        <img src="images/icon/ticket.png" alt="ticket">
-        <span>Buy Ticket</span>
-      </a>
-      </div>
-  </div>
-</nav>
+	<div class="container-fluid p-0">
+		<!-- logo -->
+		<a class="navbar-brand" href="index.html">
+		  <img src="images/logo.png" alt="logo">
+		</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+		<span class="fa fa-bars"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarNav">
+		<ul class="navbar-nav mx-auto">
+		  <li class="nav-item">
+			<a class="nav-link" href="index.html"  data-toggle="dropdown">Home</a>
+		  </li>
+		  <li class="nav-item">
+			  <a class="nav-link" href="about-us.html">About</a>
+		  </li>
+		  <li class="nav-item active">
+			  <a class="nav-link" href="performances.html">Performances</a>
+		  </li>
+		  <li class="nav-item">
+			  <a class="nav-link" href="merchandise.html">Merch</a>
+		  </li>
+		  <li class="nav-item">
+			  <a class="nav-link" href="auditions.html">Auditions</a>
+		  </li>
+		  <li class="nav-item">
+			  <a class="nav-link" href="contact.html">Contact</a>
+		  </li>
+		</div>
+	</div>
+  </nav>
 
 <!--====  End of Navigation Section  ====-->
 
