--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="index.html"  data-toggle="dropdown">Home</a>
+          <a class="nav-link" href="index.html">Home</a>
         </li>
         <li class="nav-item">
 			<a class="nav-link" href="about-us.html">About</a>
@@ -85,7 +85,7 @@
 					<!-- Coundown Timer -->
 					<div class="timer"></div>
 					<h1>The Beat</h1>
-					<h2>Conference 2017</h2>
+					<h2>UCSD Co-Ed Acapella</h2>
 					<h6>02-05 July 2017 California</h6>
 					<!-- Action Button -->
 					<a href="#" class="btn btn-white-md">hire us!</a>
