--- a/performances.html
+++ b/performances.html
@@ -47,7 +47,7 @@
 		<div class="collapse navbar-collapse" id="navbarNav">
 		<ul class="navbar-nav mx-auto">
 		  <li class="nav-item">
-			<a class="nav-link" href="index.html"  data-toggle="dropdown">Home</a>
+			<a class="nav-link" href="index.html">Home</a>
 		  </li>
 		  <li class="nav-item">
 			  <a class="nav-link" href="about-us.html">About</a>
