about us skeleton update

--- a/about-us.html
+++ b/about-us.html
@@ -36,37 +36,38 @@
 =========================================-->
 
 <nav class="navbar main-nav border-less fixed-top navbar-expand-lg p-0">
-	<div class="container-fluid p-0">
-		<!-- logo -->
-		<a class="navbar-brand" href="index.html">
-		  <img src="images/logo.png" alt="logo">
-		</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-		<span class="fa fa-bars"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-		<ul class="navbar-nav mx-auto">
-		  <li class="nav-item">
-			<a class="nav-link" href="index.html">Home</a>
-		  </li>
-		  <li class="nav-item active">
-			  <a class="nav-link" href="about-us.html">About</a>
-		  </li>
-		  <li class="nav-item">
-			  <a class="nav-link" href="performances.html">Performances</a>
-		  </li>
-		  <li class="nav-item">
-			  <a class="nav-link" href="merchandise.html">Merch</a>
-		  </li>
-		  <li class="nav-item">
-			  <a class="nav-link" href="auditions.html">Auditions</a>
-		  </li>
-		  <li class="nav-item">
-			  <a class="nav-link" href="contact.html">Contact</a>
-		  </li>
-		</div>
-	</div>
-  </nav>
+	    <div class="container-fluid p-0">
+	        <!-- logo -->
+	        <a class="navbar-brand" href="index.html">
+	          <img src="images/logo.png" alt="logo">
+	        </a>
+	        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+	        <span class="fa fa-bars"></span>
+	        </button>
+	        <div class="collapse navbar-collapse" id="navbarNav">
+	        <ul class="navbar-nav mx-auto">
+	          <li class="nav-item">
+	            <a class="nav-link" href="index.html">Home</a>
+	          </li>
+	          <li class="nav-item active">
+	              <a class="nav-link" href="about-us.html">About</a>
+	          </li>
+	          <li class="nav-item">
+	              <a class="nav-link" href="performances.html">Performances</a>
+	          </li>
+	          <li class="nav-item">
+	              <a class="nav-link" href="merchandise.html">Merch</a>
+	          </li>
+	          <li class="nav-item">
+	              <a class="nav-link" href="auditions.html">Auditions</a>
+	          </li>
+	          <li class="nav-item">
+	              <a class="nav-link" href="contact.html">Contact</a>
+	          </li>
+	        </div>
+	    </div>
+	  </nav>
+	
 
 <!--====  End of Navigation Section  ====-->
 
@@ -81,11 +82,11 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<div class="title">
-					<h3>Our Speaker</h3>
+					<h3>About The Beat</h3>
 				</div>
 				<ol class="breadcrumb p-0 m-0">
 				  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-				  <li class="breadcrumb-item active">Our Speaker</li>
+				  <li class="breadcrumb-item active">About The Beat</li>
 				</ol>
 			</div>
 		</div>
@@ -95,17 +96,56 @@
 <!--====  End of Page Title  ====-->
 
 
+<!--===========================
+=            About            =
+============================-->
+
+<section class="section about">
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-4 col-md-6 align-self-center">
+				<div class="image-block bg-about">
+					<img class="img-fluid" src="images/speakers/featured-speaker.jpg" alt="">
+				</div>
+			</div>
+			<div class="col-lg-8 col-md-6 align-self-center">
+				<div class="content-block">
+					<div class="description-one">
+						<p>Hailing from sunny La Jolla, CA, The Beat distinguishes itself by its values in working hard, playing hard, and - most importantly - loving each other to the max. This group of singers with diverse interests and backgrounds was brought together in 2004 by their passion for music - a passion that blossomed into an immense love and respect for one another.<br><br>
+							From jazz to country to rock and pop, The Beat always delivers its own personal soul and style. The group has covered artists such as Sara Bareilles, Queen, Ed Sheeran, Beyonce, TLC, Justin Timberlake, Florence + the Machine, Nicki Minaj, and much more! In Fall of 2011, The Beat released their third CD entitled “Boom Baby!”
+
+​
+
+Now in its fifteenth year, The Beat has had the privilege to perform everywhere, including weddings, museums, senior citizen nursing homes, various campus events, and at the International Championship of Collegiate A Cappella (ICCA), winning first place at their quarterfinal in 2014 (then advancing to the West Semifinals), and third in 2015, along with various awards for choreography and arrangements. The group also hosts two main shows during the academic year: a joint concert in the fall that features other San Diegan a cappella groups and a themed concert/musical extravaganza in the spring! Past spring shows have been: “The ZomBeat Acapocalypse”, “Spongebob Squarebeat”, “Beat to the Future”, “Harry Potter and the Beat of the Yule Ball” and more!
+<br><br>
+​
+
+Their unmistakable friendship shines through in each performance, making for an enchanting and moving experience. This is not just another talented group of singers, but a family.
+						</p>
+					</div>
+					<div class="description-two">
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt ut labore et dolore magna aliq enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+<!--====  End of About  ====-->
+
 <!--==============================
 =            Speakers            =
 ===============================-->
 
-<section class="section speakers white">
+<section class="section speakers bg-speaker overlay-lighter">
 	<div class="container">
 		<div class="row">
 			<div class="col-12">
 				<!-- Section Title -->
-				<div class="section-title">
-					<h3>Who <span class="alternate">Speaking?</span></h3>
+				<div class="section-title white">
+					<h3>Who's <span class="alternate">Who?</span></h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusm tempor incididunt ut labore</p>
 				</div>
 			</div>
@@ -285,57 +325,6 @@
 
 <!--====  End of Speakers  ====-->
 
-<!--==============================================
-=            Call to Action Subscribe            =
-===============================================-->
-
-<section class="cta-subscribe bg-subscribe overlay-dark">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 mr-auto">
-				<!-- Subscribe Content -->
-				<div class="content">
-					<h3>Subscribe to Our <span class="alternate">Newsletter</span></h3>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusm tempor</p>
-				</div>
-			</div>
-			<div class="col-md-6 ml-auto align-self-center">
-				<!-- Subscription form -->
-				<form action="#" class="row">
-					<div class="col-lg-8 col-md-12">
-						<input type="email" class="form-control main white mb-lg-0" placeholder="Email">
-					</div>
-					<div class="col-lg-4 col-md-12">
-						<div class="subscribe-button">
-							<button class="btn btn-main-md">Subscribe</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-</section>
-
-<!--====  End of Call to Action Subscribe  ====-->
-
-<!--================================
-=            Google Map            =
-=================================-->
-
-<section class="map">
-	<!-- Google Map -->
-	<div id="map"></div>
-	<div class="address-block">
-		<h4>Docklands Convention</h4>
-		<ul class="address-list p-0 m-0">
-			<li><i class="fa fa-home"></i><span>1201 Park Street, Fifth Avenue, <br>Dhanmondy, Dhaka.</span></li>
-			<li><i class="fa fa-phone"></i><span>[88] 657 524 332</span></li>
-		</ul>
-		<a href="#" class="btn btn-white-md">Get Direction</a>
-	</div>
-</section>
-
-<!--====  End of Google Map  ====-->
 
 <!--============================
 =            Footer            =
