--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,19 @@
 
 <!--====  End of Page Title  ====-->
 
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+USE https://formspree.io
+
 
 <section class="section contact-form">
 	<div class="container">
@@ -101,7 +114,7 @@
 			<div class="col-12">
 				<div class="section-title">
 					<h3>Get in <span class="alternate">Touch</span></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores, velit.</p>
+					<p>Have questions about anything? Shoot us a message!</p>
 				</div>
 			</div>
 		</div>
