about member data/bg pics

--- a/about-us.html
+++ b/about-us.html
@@ -124,7 +124,7 @@ Their unmistakable friendship shines through in each performance, making for an 
 						</p>
 					</div>
 					<div class="description-two">
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmtempor incididunt ut labore et dolore magna aliq enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea.</p>
+						<p>Do you like waffles? Yeah I like waffles! Do you like pancakes? Yeah I love pancakes!</p>
 					</div>
 
 				</div>
@@ -146,7 +146,7 @@ Their unmistakable friendship shines through in each performance, making for an 
 				<!-- Section Title -->
 				<div class="section-title white">
 					<h3>Meet <span class="alternate">The Beat</span></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusm tempor incididunt ut labore</p>
+					<p>NOTE: THESE PICS ARE TOO DETAILED, TAKES FOREVER FOR SITE TO LOAD <br> DECREASE IMAGE QUALITY!!!</p>
 				</div>
 			</div>
 		</div>
@@ -160,7 +160,11 @@ Their unmistakable friendship shines through in each performance, making for an 
 				v-bind:socla1="member.socials[0].class"
 				v-bind:soli1="member.socials[0].link"
 				v-bind:socla2="member.socials[1].class"
-				v-bind:soli2="member.socials[1].link"></person>
+				v-bind:soli2="member.socials[1].link"
+				v-bind:socla3="member.socials[2].class"
+				v-bind:soli3="member.socials[2].link"
+				v-bind:socla4="member.socials[3].class"
+				v-bind:soli4="member.socials[3].link"></person>
 
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<!-- Speaker 1 -->
@@ -172,6 +176,8 @@ Their unmistakable friendship shines through in each performance, making for an 
 							<ul class="list-inline">
 								<li class="list-inline-item"><a v-bind:href="members[0].socials[0].link"><i v-bind:class="members[0].socials[0].class"></i></a></li>
 								<li class="list-inline-item"><a v-bind:href="members[0].socials[1].link"><i v-bind:class="members[0].socials[1].class"></i></a></li>
+								<li class="list-inline-item"><a v-bind:href="members[0].socials[2].link"><i v-bind:class="members[0].socials[2].class"></i></a></li>
+								<li class="list-inline-item"><a v-bind:href="members[0].socials[3].link"><i v-bind:class="members[0].socials[3].class"></i></a></li>								
 							</ul>
 						</div>
 					</div>
