Auditions page/darker main splash image

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 					<h2>UCSD Co-Ed Acapella</h2>
 					<h6>02-05 July 2017 California</h6>
 					<!-- Action Button -->
-					<a href="#" class="btn btn-white-md">hire us!</a>
+					<a href="contact.html" class="btn btn-white-md">hire us!</a>
 				</div>
 			</div>
 		</div>
