--- a/auditions.html
+++ b/auditions.html
@@ -81,11 +81,11 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<div class="title">
-					<h3>FAQS</h3>
+					<h3>Auditions</h3>
 				</div>
 				<ol class="breadcrumb p-0 m-0">
 				  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-				  <li class="breadcrumb-item active">FAQS</li>
+				  <li class="breadcrumb-item active">Auditions</li>
 				</ol>
 			</div>
 		</div>
@@ -104,8 +104,13 @@
 		<div class="row">
 			<div class="col-12">
 				<div class="section-title">
-					<h3>Our <span class="alternate">FAQ</span></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do eiusm tempor incididunt ut labore dolore magna</p>
+					<h1>Be <span class="alternate">The Beat!</span></h1>
+					<p>We're so excited to hear you want to join our family! Sign up for an audition using 
+						<br> 
+						<a href="http://www.acaspot.com/audition?g=160">our AcaSpot link (www.acaspot.com/audition) </a> so we can hear your lovely voice and learn more about you!
+					</p>
+					<br>
+					<a href="#" class="btn btn-outline-md">Sign Up for Auditions!</a>
 				</div>
 			</div>
 		</div>
@@ -331,25 +336,6 @@
 </section>
 
 <!--====  End of Call to Action Subscribe  ====-->
-
-<!--================================
-=            Google Map            =
-=================================-->
-
-<section class="map">
-	<!-- Google Map -->
-	<div id="map"></div>
-	<div class="address-block">
-		<h4>Docklands Convention</h4>
-		<ul class="address-list p-0 m-0">
-			<li><i class="fa fa-home"></i><span>1201 Park Street, Fifth Avenue, <br>Dhanmondy, Dhaka.</span></li>
-			<li><i class="fa fa-phone"></i><span>[88] 657 524 332</span></li>
-		</ul>
-		<a href="#" class="btn btn-white-md">Get Direction</a>
-	</div>
-</section>
-
-<!--====  End of Google Map  ====-->
 
 <!--============================
 =            Footer            =
