auditions page/contact title change!

--- a/auditions.html
+++ b/auditions.html
@@ -124,14 +124,15 @@
 							<div class="card-header" id="headingOne">
 							  <h5 class="mb-0">
 							    <a data-toggle="collapse" href="#collapseOne">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
+							      <span class="fa fa-plus-circle"></span>How do I prepare for the audition?
 							    </a>
 							  </h5>
 							</div>
 							<!-- Collapse Body -->
-							<div id="collapseOne" class="collapse show" data-parent="#accordion">
+							<div id="collapseOne" class="collapse" data-parent="#accordion">
 							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
+									Prepare and practice one solo which is 30-60 seconds long. You should choose a song that you like and which best showcases your vocal abilities. 
+									The specific duration is up to you and <i>will not</i> affect the audition.
 							  </div>
 							</div>
 						</div>
@@ -141,14 +142,15 @@
 							<div class="card-header" id="headingOne">
 							  <h5 class="mb-0">
 							    <a data-toggle="collapse" href="#collapseTwo">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
+							      <span class="fa fa-plus-circle"></span>What do I do when I get to the audition?
 							    </a>
 							  </h5>
 							</div>
 							<!-- Collapse Body -->
 							<div id="collapseTwo" class="collapse" data-parent="#accordion">
 							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
+									Arrive and sign in at our friendly Meet-N-Greet Room where you can relax and socialize with our current members!
+									We'll be calling you in  based on your time slots so just hang tight until it's your turn to dazzle us!
 							  </div>
 							</div>
 						</div>
@@ -158,51 +160,19 @@
 							<div class="card-header" id="headingOne">
 							  <h5 class="mb-0">
 							    <a data-toggle="collapse" href="#collapseThree">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
+							      <span class="fa fa-plus-circle"></span>How does auditioning work?
 							    </a>
 							  </h5>
 							</div>
 							<!-- Collapse Body -->
 							<div id="collapseThree" class="collapse" data-parent="#accordion">
 							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
+									You'll walk over to the Audition Room to meet our music directors and we'll help you warm up. 
+									Then we'll walk you through some exercises to test your range, tonal memory, ability to keep rhythm, and familiarity sight singing.
 							  </div>
 							</div>
 						</div>
-						<!-- Collapse -->
-						<div class="card">
-							<!-- Collapse Header -->
-							<div class="card-header" id="headingOne">
-							  <h5 class="mb-0">
-							    <a data-toggle="collapse" href="#collapseFour">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
-							    </a>
-							  </h5>
-							</div>
-							<!-- Collapse Body -->
-							<div id="collapseFour" class="collapse" data-parent="#accordion">
-							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
-							  </div>
-							</div>
-						</div>
-						<!-- Collapse -->
-						<div class="card">
-							<!-- Collapse Header -->
-							<div class="card-header" id="headingOne">
-							  <h5 class="mb-0">
-							    <a data-toggle="collapse" href="#collapseFive">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
-							    </a>
-							  </h5>
-							</div>
-							<!-- Collapse Body -->
-							<div id="collapseFive" class="collapse" data-parent="#accordion">
-							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
-							  </div>
-							</div>
-						</div>
+						
 					</div>
 				</div>
 			</div>
@@ -211,89 +181,61 @@
 					<div id="accordionTwo">
 						<!-- Collapse -->
 						<div class="card">
-							<!-- Collapse Header -->
-							<div class="card-header" id="headingOne">
-							  <h5 class="mb-0">
-							    <a data-toggle="collapse" href="#collapseSix">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
-							    </a>
-							  </h5>
+								<!-- Collapse Header -->
+								<div class="card-header" id="headingOne">
+								  <h5 class="mb-0">
+									<a data-toggle="collapse" href="#collapseFour">
+									  <span class="fa fa-plus-circle"></span>What if I can't sight sing??
+									</a>
+								  </h5>
+								</div>
+								<!-- Collapse Body -->
+								<div id="collapseFour" class="collapse" data-parent="#accordion">
+								  <div class="card-body">
+										Do your best and don't stress! It's okay if you can't sight sing, we're mostly interested in your ability to showcase your beautiful voice!
+										Just take a calm breath, and sing a confident solo!
+								  </div>
+								</div>
 							</div>
-							<!-- Collapse Body -->
-							<div id="collapseSix" class="collapse" data-parent="#accordionTwo">
-							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
-							  </div>
+							<!-- Collapse -->
+							<div class="card">
+								<!-- Collapse Header -->
+								<div class="card-header" id="headingOne">
+								  <h5 class="mb-0">
+									<a data-toggle="collapse" href="#collapseFive">
+									  <span class="fa fa-plus-circle"></span>How do callbacks work?
+									</a>
+								  </h5>
+								</div>
+								<!-- Collapse Body -->
+								<div id="collapseFive" class="collapse" data-parent="#accordion">
+								  <div class="card-body">
+										On the last day of auditions we will announce who will proceed to the callback. 
+										At this time we'll also send additional instructions to those who are called back.							  </div>
+								</div>
 							</div>
-						</div>
-						<!-- Collapse -->
+													<!-- Collapse -->
 						<div class="card">
-							<!-- Collapse Header -->
-							<div class="card-header" id="headingOne">
-							  <h5 class="mb-0">
-							    <a data-toggle="collapse" href="#collapseSeven">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
-							    </a>
-							  </h5>
+								<!-- Collapse Header -->
+								<div class="card-header" id="headingOne">
+								  <h5 class="mb-0">
+									<a data-toggle="collapse" href="#collapseSix">
+									  <span class="fa fa-plus-circle"></span>Wait, I have more questions!
+									</a>
+								  </h5>
+								</div>
+								<!-- Collapse Body -->
+								<div id="collapseSix" class="collapse" data-parent="#accordionTwo">
+									  <div class="card-body">
+										The Beat @ UCSD loves your enthusiasm and questions!
+										<br><br>
+										For general information about joining any acapella group on campus, be sure to 
+										<a href="www.facebook.com/GROUP"><u>join the UCSD A Cappella Auditionees 2019 Facebook Group.</u></a>
+										<br><br>
+										For specific information, please <a href="contact.html">contact us!</a>
+									</div>
+								</div>
 							</div>
-							<!-- Collapse Body -->
-							<div id="collapseSeven" class="collapse" data-parent="#accordionTwo">
-							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
-							  </div>
-							</div>
-						</div>
-						<!-- Collapse -->
-						<div class="card">
-							<!-- Collapse Header -->
-							<div class="card-header" id="headingOne">
-							  <h5 class="mb-0">
-							    <a data-toggle="collapse" href="#collapseEight">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
-							    </a>
-							  </h5>
-							</div>
-							<!-- Collapse Body -->
-							<div id="collapseEight" class="collapse" data-parent="#accordionTwo">
-							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
-							  </div>
-							</div>
-						</div>
-						<!-- Collapse -->
-						<div class="card">
-							<!-- Collapse Header -->
-							<div class="card-header" id="headingOne">
-							  <h5 class="mb-0">
-							    <a data-toggle="collapse" href="#collapseNine">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
-							    </a>
-							  </h5>
-							</div>
-							<!-- Collapse Body -->
-							<div id="collapseNine" class="collapse" data-parent="#accordionTwo">
-							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
-							  </div>
-							</div>
-						</div>
-						<!-- Collapse -->
-						<div class="card">
-							<!-- Collapse Header -->
-							<div class="card-header" id="headingOne">
-							  <h5 class="mb-0">
-							    <a data-toggle="collapse" href="#collapseTen">
-							      <span class="fa fa-plus-circle"></span>Where does it come from?
-							    </a>
-							  </h5>
-							</div>
-							<!-- Collapse Body -->
-							<div id="collapseTen" class="collapse" data-parent="#accordionTwo">
-							  <div class="card-body">
-							    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium.
-							  </div>
-							</div>
-						</div>
 					</div>
 				</div>
 			</div>
