--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@ USE https://formspree.io
 		<div class="row">
 			<div class="col-12">
 				<div class="section-title">
-					<h3>Get in <span class="alternate">Touch</span></h3>
+					<h3>Ring <span class="alternate">The Beat</span></h3>
 					<p>Have questions about anything? Shoot us a message!</p>
 				</div>
 			</div>
@@ -137,25 +137,6 @@ USE https://formspree.io
 		</form>
 	</div>
 </section>
-
-<!--================================
-=            Google Map            =
-=================================-->
-
-<section class="map">
-	<!-- Google Map -->
-	<div id="map"></div>
-	<div class="address-block">
-		<h4>Docklands Convention</h4>
-		<ul class="address-list p-0 m-0">
-			<li><i class="fa fa-home"></i><span>1201 Park Street, Fifth Avenue, <br>Dhanmondy, Dhaka.</span></li>
-			<li><i class="fa fa-phone"></i><span>[88] 657 524 332</span></li>
-		</ul>
-		<a href="#" class="btn btn-white-md">Get Direction</a>
-	</div>
-</section>
-
-<!--====  End of Google Map  ====-->
 
 <!--============================
 =            Footer            =
