--- a/about-us.html
+++ b/about-us.html
@@ -77,7 +77,7 @@
 =            Page Title            =
 =================================-->
 
-<section class="page-title bg-title overlay-dark">
+<section class="page-title bg-about-title overlay-dark">
 	<div class="container">
 		<div class="row">
 			<div class="col-12 text-center">
