--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="row">
 			<div class="col-lg-4 col-md-6 align-self-center">
 				<div class="image-block bg-about">
-					<img class="img-fluid" src="images/speakers/featured-speaker.jpg" alt="">
+					<img class="img-fluid" src="images/fun/splits.jpg" alt="">
 				</div>
 			</div>
 			<div class="col-lg-8 col-md-6 align-self-center">
