--- a/about-us.html
+++ b/about-us.html
@@ -107,6 +107,7 @@
 			</div>
 			<div class="col-lg-8 col-md-6 align-self-center">
 				<div class="content-block">
+					<h2>What's <span class="alternate">The Beat?</span></h2>
 					<div class="description-one">
 						<p>Hailing from sunny La Jolla, CA, The Beat distinguishes itself by its values in working hard, playing hard, and - most importantly - loving each other to the max. This group of singers with diverse interests and backgrounds was brought together in 2004 by their passion for music - a passion that blossomed into an immense love and respect for one another.<br><br>
 							From jazz to country to rock and pop, The Beat always delivers its own personal soul and style. The group has covered artists such as Sara Bareilles, Queen, Ed Sheeran, Beyonce, TLC, Justin Timberlake, Florence + the Machine, Nicki Minaj, and much more! In Fall of 2011, The Beat released their third CD entitled “Boom Baby!”
