--- a/performances.html
+++ b/performances.html
@@ -78,11 +78,11 @@
 		<div class="row">
 			<div class="col-12 text-center">
 				<div class="title">
-					<h3>Our News</h3>
+					<h3>Performances</h3>
 				</div>
 				<ol class="breadcrumb p-0 m-0">
 				  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-				  <li class="breadcrumb-item active">Our News</li>
+				  <li class="breadcrumb-item active">Performances</li>
 				</ol>
 			</div>
 		</div>
@@ -98,6 +98,17 @@
 
 <section class="news section">
 	<div class="container">
+
+			<div class="row">
+					<div class="col-12">
+						<div class="section-title">
+							<h1>Hear <span class="alternate">The Beat!</span></h1>
+							<p>Find out about upcoming performances and view our old ones!</p>
+						</div>
+					</div>
+				</div>
+
+
 		<div class="row mt-30">
 			<div class="col-lg-4 col-md-6 col-sm-8 col-10 m-auto">
 				<div class="blog-post">
