--- a/auditions.html
+++ b/auditions.html
@@ -121,7 +121,8 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseOne">
-										  <span class="fa fa-plus-circle"></span>How do I prepare for the audition?
+										  <span class="fa fa-plus-circle"></span>
+										  <span class="auditionText">How do I prepare for the audition?</span>
 										</a>
 									  </h5>
 									</div>
@@ -139,7 +140,8 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseTwo">
-										  <span class="fa fa-plus-circle"></span>What do I do when I get to the audition?
+										  <span class="fa fa-plus-circle"></span>
+										  <span class="auditionText">What do I do when I get to the audition?</span>
 										</a>
 									  </h5>
 									</div>
@@ -157,7 +159,8 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseThree">
-										  <span class="fa fa-plus-circle"></span>How does auditioning work?
+										  <span class="fa fa-plus-circle"></span>
+										  <span class="auditionText">How does auditioning work?</span>
 										</a>
 									  </h5>
 									</div>
@@ -214,7 +217,8 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseSix">
-										  <span class="fa fa-plus-circle"></span>What if I can't sight sing??
+										  <span class="fa fa-plus-circle"></span>
+										  <span class="auditionText">What if I can't sight sing??</span>
 										</a>
 									  </h5>
 									</div>
@@ -232,7 +236,8 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseSeven">
-										  <span class="fa fa-plus-circle"></span>How do callbacks work?
+										  <span class="fa fa-plus-circle"></span>
+										  <span class="auditionText">How do callbacks work?</span>
 										</a>
 									  </h5>
 									</div>
@@ -250,7 +255,8 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseEight">
-										  <span class="fa fa-plus-circle"></span>Wait, I have more questions!
+										  <span class="fa fa-plus-circle"></span>
+										  <span class="auditionText">Wait, I have more questions!</span>
 										</a>
 									  </h5>
 									</div>
