Revert "fixed wrapping issue on auditions site"
This reverts commit a0d6f571a7196102448bb94c2c9cbe15b278738a.

--- a/auditions.html
+++ b/auditions.html
@@ -121,8 +121,7 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseOne">
-										  <span class="fa fa-plus-circle"></span>
-										  <span class="auditionText">How do I prepare for the audition?</span>
+										  <span class="fa fa-plus-circle"></span>How do I prepare for the audition?
 										</a>
 									  </h5>
 									</div>
@@ -140,8 +139,7 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseTwo">
-										  <span class="fa fa-plus-circle"></span>
-										  <span class="auditionText">What do I do when I get to the audition?</span>
+										  <span class="fa fa-plus-circle"></span>What do I do when I get to the audition?
 										</a>
 									  </h5>
 									</div>
@@ -159,8 +157,7 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseThree">
-										  <span class="fa fa-plus-circle"></span>
-										  <span class="auditionText">How does auditioning work?</span>
+										  <span class="fa fa-plus-circle"></span>How does auditioning work?
 										</a>
 									  </h5>
 									</div>
@@ -217,8 +214,7 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseSix">
-										  <span class="fa fa-plus-circle"></span>
-										  <span class="auditionText">What if I can't sight sing??</span>
+										  <span class="fa fa-plus-circle"></span>What if I can't sight sing??
 										</a>
 									  </h5>
 									</div>
@@ -236,8 +232,7 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseSeven">
-										  <span class="fa fa-plus-circle"></span>
-										  <span class="auditionText">How do callbacks work?</span>
+										  <span class="fa fa-plus-circle"></span>How do callbacks work?
 										</a>
 									  </h5>
 									</div>
@@ -255,8 +250,7 @@
 									<div class="card-header" id="headingOne">
 									  <h5 class="mb-0">
 										<a data-toggle="collapse" href="#collapseEight">
-										  <span class="fa fa-plus-circle"></span>
-										  <span class="auditionText">Wait, I have more questions!</span>
+										  <span class="fa fa-plus-circle"></span>Wait, I have more questions!
 										</a>
 									  </h5>
 									</div>
